--- a/contactanos.html
+++ b/contactanos.html
@@ -13,43 +13,17 @@
         <a href="index.html"><img src="img/mc_logo.png" alt="imgbanner"></a>
         <nav>
             <ul class="menu">
-                <li><a href="torneos.html">Torneos</a></ei>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="torneos.html">Torneos</a></li>
                 <li><a href="cursos.html">Cursos</a></li>
-                <li><a href="conocenos.html">Conocenos</a></ei>
+                <li><a href="conocenos.html">Conocenos</a></li>
                 <li><a href="contactanos.html">Contactanos</a></li>
             </ul>
         </nav>
     </header>
     <h1 class="tittle">Contactanos</h1>
     <div class="contactanos_box">
-        <form action="enviar. php" method="post" enctype="application/x-www-form-urlencoded">
-                <label for="nombre">Nombre:</label>
-                <input type="text" required>
-                <br>
-                <label for="apellido">Apellido:</label>
-                <input type="text" required>
-                <br>
-                <label for="mail">E-mail:</label>
-                <input type="mail" required>
-                <br>
-                <label for="pronomtt">Pronombre:</label>
-                <input type="radio" name="pronombre">
-                <label for="sexo">Él</label>
-                <input type="radio" name="pronombre">
-                <label for="sexo">Ella</label>
-                <br>
-                <label for="motivo de consulta">Motivo:</label>
-                <select name="motivo" id="motivo">
-                    <option value="c">Cursos</option>
-                    <option value="t">Torneos</option>
-                    <option value="o">Reclamo/Consulta</option>
-                </select>
-                <br>
-                <textarea name="comentarios" id="" cols="25" rows="20" placeholder="ingresa aquí tu pedido/reclamo/consulta..."></textarea>
-                <br>
-                <input type="submit" value="enviar">
-                <input type="reset" value="restablecer">
-        </form>
+        <iframe id="" allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera" src="https://my.forms.app/form/620064016ab665110bb521d8" frameborder="0" style="width: 1px; min-width:100%; height:100%; border:none;"></iframe>
     </div>
     <footer class="footer">
         <div class="footer_redes">
