--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <a href="index.html"><img src="img/mc_logo.png" alt="imgbanner"></a>
         <nav>
             <ul class="menu">
-                <li><a href="torneos.html">Torneos</a></ei>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="torneos.html">Torneos</a></li>
                 <li><a href="cursos.html">Cursos</a></li>
-                <li><a href="conocenos.html">Conocenos</a></ei>
+                <li><a href="conocenos.html">Conocenos</a></li>
                 <li><a href="contactanos.html">Contactanos</a></li>
             </ul>
         </nav>
