--- a/cursos.html
+++ b/cursos.html
@@ -37,8 +37,8 @@
         <div class="footer_redes">
             <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
             <a href="https://www.facebook.com" target="blank_"><img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook"></a>
-            <a href="https://www.instagram.com"><img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram"></a>
-            <a href="https://www.twitter.com"><img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter"></a>
+            <a href="https://www.instagram.com" target="blank_"><img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram"></a>
+            <a href="https://www.twitter.com" target="blank_"><img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter"></a>
         </div>
         <p>Sitio web creado por Agustín Taborda</p>
     </footer>
