--- a/contactanos.html
+++ b/contactanos.html
@@ -5,34 +5,119 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactanos</title>
-    <link rel="shortcut icon" href="img/mclogo_16x16.png">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="shortcut icon" href="/img/mclogo16x16.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="container_contactanos">
-    <header class="header">
-        <a href="index.html"><img src="img/mc_logo.png" alt="imgbanner"></a>
-        <nav>
-            <ul class="menu">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="torneos.html">Torneos</a></li>
-                <li><a href="cursos.html">Cursos</a></li>
-                <li><a href="conocenos.html">Conocenos</a></li>
-                <li><a href="contactanos.html">Contactanos</a></li>
-            </ul>
-        </nav>
-    </header>
-    <h1 class="tittle">Contactanos</h1>
-    <div class="contactanos_box">
-        <iframe id="" allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera" src="https://my.forms.app/form/620064016ab665110bb521d8" frameborder="0" style="width: 1px; min-width:100%; height:100%; border:none;"></iframe>
-    </div>
-    <footer class="footer">
-        <div class="footer_redes">
-            <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
-            <a href="https://www.facebook.com" target="blank_"><img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook"></a>
-            <a href="https://www.instagram.com" target="blank_"><img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram"></a>
-            <a href="https://www.twitter.com" target="blank_"><img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter"></a>
+<body>
+    <!-- nav bar -->
+    <nav class="navbar navbar-expand-lg bg-danger bg-gradient navbar-dark">
+        <div class="container">
+            <a href="index.html" class="navbar-brand"><img src="/img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-dark">Academy</span></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navmenu">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="torneos.html" class="nav-link">Torneos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="cursos.html" class="nav-link">Cursos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="conocenos.html" class="nav-link">Conocenos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contactanos.html" class="nav-link">Contactanos</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <p>Sitio web creado por Agustín Taborda</p>
+    </nav>
+    <!-- tittle banner-->
+    <section class="bg-danger bg-gradient text-light text-center p-3">
+        <h1 class="tittle">Contactanos</h1>
+    </section>
+<!-- contactanos form -->
+<div class="container p-5 my-5 bg-danger bg-gradient">
+    <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+        <div class="form-floating mb-3">
+            <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
+            <label for="emailAddress">Email Address</label>
+            <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Email Address is required.</div>
+            <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
+        </div>
+        <div class="form-floating mb-3">
+            <input class="form-control" id="nombre" type="text" placeholder="Nombre" data-sb-validations="required" />
+            <label for="nombre">Nombre</label>
+            <div class="invalid-feedback" data-sb-feedback="nombre:required">Nombre is required.</div>
+        </div>
+        <div class="form-floating mb-3">
+            <input class="form-control" id="apellido" type="text" placeholder="Apellido" data-sb-validations="required" />
+            <label for="apellido">Apellido</label>
+            <div class="invalid-feedback" data-sb-feedback="apellido:required">Apellido is required.</div>
+        </div>
+        <div class="mb-3">
+            <label class="form-label d-block">Genero</label>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" id="hombre" type="radio" name="genero" data-sb-validations="" />
+                <label class="form-check-label" for="hombre">Hombre</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" id="mujer" type="radio" name="genero" data-sb-validations="" />
+                <label class="form-check-label" for="mujer">Mujer</label>
+            </div>
+        </div>
+        <div class="form-floating mb-3">
+            <select class="form-select" id="motivo" aria-label="Motivo">
+                <option value="Cursos">Cursos</option>
+                <option value="Torneos">Torneos</option>
+                <option value="Consulta">Consulta</option>
+                <option value="Reclamo">Reclamo</option>
+            </select>
+            <label for="motivo">Motivo</label>
+        </div>
+        <div class="form-floating mb-3">
+            <textarea class="form-control" id="ingreseLaConsultaReclamo" type="text" placeholder="Ingrese la consulta/reclamo..." style="height: 10rem;" data-sb-validations="required"></textarea>
+            <label for="ingreseLaConsultaReclamo">Ingrese la consulta/reclamo...</label>
+            <div class="invalid-feedback" data-sb-feedback="ingreseLaConsultaReclamo:required">Ingrese la consulta/reclamo... is required.</div>
+        </div>
+        <div class="d-none" id="submitSuccessMessage">
+            <div class="text-center mb-3">
+                <div class="fw-bolder">Form submission successful!</div>
+                <p>To activate this form, sign up at</p>
+                <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+            </div>
+        </div>
+        <div class="d-none" id="submitErrorMessage">
+            <div class="text-center text-danger mb-3">Error sending message!</div>
+        </div>
+        <div class="d-grid">
+            <button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button>
+        </div>
+    </form>
+</div>
+    <!-- footer -->
+    <footer class="p-1 bg-danger bg-gradient">
+        <div class="d-flex flex-wrap justify-content-between align-items-center p-3">
+            <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
+            <a href="https://www.facebook.com" target="blank_">
+                <img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook">
+            </a>
+            <a href="https://www.instagram.com" target="blank_">
+                <img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram">
+            </a>
+            <a href="https://www.twitter.com" target="blank_">
+                <img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter">
+            </a>
+        </div>
+        <p class="text-center">Sitio web creado por Agustín Taborda</p>
     </footer>
+    <!-- cdn bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
