--- a/cursos.html
+++ b/cursos.html
@@ -4,43 +4,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos</title>
-    <link rel="shortcut icon" href="img/mclogo_16x16.png">
-    <link rel="stylesheet" href="css/estilos.css">
+    <title>Torneos</title>
+    <link rel="shortcut icon" href="/img/mclogo16x16.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="container_cursos">
-    <header class="header">
-        <a href="index.html"><img src="img/mc_logo.png" alt="imgbanner"></a>
-        <nav>
-            <ul class="menu">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="torneos.html">Torneos</a></li>
-                <li><a href="cursos.html">Cursos</a></li>
-                <li><a href="conocenos.html">Conocenos</a></li>
-                <li><a href="contactanos.html">Contactanos</a></li>
-            </ul>
-        </nav>
-    </header>
-    <h1 class="tittle">Cursos</h1>
-    <div class="bootcamp1">
-        <h2>Bootcamp Intermedio</h2>
-        <p>Aprende a llevar tus conceptos básicos al siguiente nivel en aperturas, medios juegos, tácticas, estrategia y finales. Si estás listo para desarrollar los fundamentos del ajedrez para principiantes, este curso es para vos. Diseñé este curso para jugadores con una calificación de aproximadamente entre 800 y 1600. Inscribite ahora y preparate para disparar tus habilidades.</p>
-    </div>
-    <div class="bootcamp2">
-        <h2>Bootcamp Principiante</h2>
-        <p>Aprende los fundamentos del ajedrez que te permitirán aplastar a tus oponentes en poco tiempo. Si querés aprender a jugar al ajedrez, o tenés poca experiencia en el juego y estás luchando por mejorar, ¡este curso es para vos! Te brindará todos los fundamentos en las 3 etapas del juego: apertura, medio juego y final. Más importante aún, acelerará su proceso de aprendizaje al enseñarte cómo evitar errores comunes.</p>
-    </div>
-    <div class="subscribe">
-        <a href="contactanos.html" class="cursos_linktext">¡Inscribite ahora y comenzá a ganar juegos hoy!</a>
-    </div>
-    <footer class="footer">
-        <div class="footer_redes">
-            <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
-            <a href="https://www.facebook.com" target="blank_"><img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook"></a>
-            <a href="https://www.instagram.com" target="blank_"><img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram"></a>
-            <a href="https://www.twitter.com" target="blank_"><img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter"></a>
+<body>
+    <!-- nav bar -->
+    <nav class="navbar navbar-expand-lg bg-danger bg-gradient navbar-dark">
+        <div class="container">
+            <a href="index.html" class="navbar-brand"><img src="/img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-dark">Academy</span></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navmenu">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="torneos.html" class="nav-link">Torneos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="cursos.html" class="nav-link">Cursos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="conocenos.html" class="nav-link">Conocenos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contactanos.html" class="nav-link">Contactanos</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <p>Sitio web creado por Agustín Taborda</p>
+    </nav>
+    <!-- tittle banner-->
+    <section class="bg-danger bg-gradient text-light text-center p-3">
+        <h1 class="tittle">Torneos</h1>
+    </section>
+    <!-- torneos main -->
+    <div class="row p-3">
+        <div class="col-md p-2">
+            <div class="card text-center">
+                <div class="card-body bg-danger bg-gradient">
+                <h3 class="card-title p-3">Bootcamp Intermedio</h3>
+                <p class="card-text p-3">Aprende a llevar tus conceptos básicos al siguiente nivel en aperturas, medios juegos, tácticas, estrategia y finales. Si estás listo para desarrollar los fundamentos del ajedrez para principiantes, este curso es para vos. Diseñé este curso para jugadores con una calificación de aproximadamente entre 800 y 1600. Inscribite ahora y preparate para disparar tus habilidades.</p>
+                </div>
+            </div>
+            <img src="/img/kingbc.png" class="img-fluid rounded mx-auto d-block p-2" alt="pieza rey">
+        </div>
+        <div class="col-md p-2">
+            <div class="card text-center">
+                </div>
+                <div class="card-body bg-danger bg-gradient">
+                <h3 class="card-title p-3">Bootcamp Principiante</h3>
+                <p class="card-text p-3">Aprende los fundamentos del ajedrez que te permitirán aplastar a tus oponentes en poco tiempo. Si querés aprender a jugar al ajedrez, o tenés poca experiencia en el juego y estás luchando por mejorar, ¡este curso es para vos! Te brindará todos los fundamentos en las 3 etapas del juego: apertura, medio juego y final. Más importante aún, acelerará su proceso de aprendizaje al enseñarte cómo evitar errores comunes.</p>
+                </div>
+                <img src="/img/queenbc.png" class="img-fluid rounded mx-auto d-block p-2" alt="pieza reina">
+            </div>
+        </div>
+        <div class="container d-flex justify-content-center align-items-center p-4">
+            <a href="/contactanos.html" class="btn btn-dark bg-gradient">¡Inscribite ahora y comenzá a ganar juegos hoy!</a>
+        </div>
+    </div>
+    <!-- footer -->
+    <footer class="p-1 bg-danger bg-gradient">
+        <div class="d-flex flex-wrap justify-content-between align-items-center p-3">
+            <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
+            <a href="https://www.facebook.com" target="blank_">
+                <img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook">
+            </a>
+            <a href="https://www.instagram.com" target="blank_">
+                <img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram">
+            </a>
+            <a href="https://www.twitter.com" target="blank_">
+                <img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter">
+            </a>
+        </div>
+        <p class="text-center">Sitio web creado por Agustín Taborda</p>
     </footer>
+    <!-- cdn bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
