--- a/index.html
+++ b/index.html
@@ -5,35 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masterchess Academy</title>
-    <link rel="shortcut icon" href="img/mclogo_16x16.png">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="shortcut icon" href="/img/mclogo16x16.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="container_home">
-    <header class="header">
-        <a href="index.html"><img src="img/mc_logo.png" alt="imgbanner"></a>
-        <nav>
-            <ul class="menu">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="torneos.html">Torneos</a></li>
-                <li><a href="cursos.html">Cursos</a></li>
-                <li><a href="conocenos.html">Conocenos</a></li>
-                <li><a href="contactanos.html">Contactanos</a></li>
-            </ul>
-        </nav>
-    </header>
-    <h1 class="tittle">¡Bienvenido a Masterchess!</h1>
-    <div class="hero">
-        <h2 class="home_text">Aprende a jugar como un profesional con cursos creados por Maestros Nacionales</h2>
-        <a href="cursos.html">Ver cursos</a>
-    </div>
-    <footer class="footer">
-        <div class="footer_redes">
-            <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
-            <a href="https://www.facebook.com" target="blank_"><img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook"></a>
-            <a href="https://www.instagram.com" target="blank_"><img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram"></a>
-            <a href="https://www.twitter.com" target="blank_"><img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter"></a>
+<body>
+    <!-- nav bar -->
+    <nav class="navbar navbar-expand-lg bg-danger bg-gradient navbar-dark">
+        <div class="container">
+            <a href="index.html" class="navbar-brand"><img src="/img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-dark">Academy</span></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navmenu">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="torneos.html" class="nav-link">Torneos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="cursos.html" class="nav-link">Cursos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="conocenos.html" class="nav-link">Conocenos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contactanos.html" class="nav-link">Contactanos</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <p>Sitio web creado por Agustín Taborda</p>
+    </nav>
+    <!-- tittle banner-->
+    <section class="bg-danger bg-gradient text-light text-center p-3">
+        <h1 class="tittle">¡Bienvenido a Masterchess!</h1>
+    </section>
+    <!-- home main -->
+    <div class="container">
+        <h2 class="text-center p-5 m-5">Aprende a jugar como un profesional con cursos creados por <span class="fw-bold">Maestros Nacionales</span></h2>
+        <div class="abtn-box d-flex justify-content-center">
+            <a href="/cursos.html" class="btn btn-danger bg-gradient p-2 m-5 rounded-pill d-flex justify-content-around">Ver cursos</a>
+        </div>
+    </div>
+    <!-- footer -->
+    <footer class="p-1 bg-danger bg-gradient footer_short">
+        <div class="d-flex flex-wrap justify-content-between align-items-center p-3">
+            <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
+            <a href="https://www.facebook.com" target="blank_">
+                <img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook">
+            </a>
+            <a href="https://www.instagram.com" target="blank_">
+                <img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram">
+            </a>
+            <a href="https://www.twitter.com" target="blank_">
+                <img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter">
+            </a>
+        </div>
+        <p class="text-center">Sitio web creado por Agustín Taborda</p>
     </footer>
+    <!-- cdn bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
