--- a/torneos.html
+++ b/torneos.html
@@ -5,57 +5,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Torneos</title>
-    <link rel="shortcut icon" href="img/mclogo_16x16.png">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="shortcut icon" href="/img/mclogo16x16.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="container_torneos">
-    <header class="header">
-        <a href="index.html"><img src="img/mc_logo.png" alt="imgbanner"></a>
-        <nav>
-            <ul class="menu">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="torneos.html">Torneos</a></li>
-                <li><a href="cursos.html">Cursos</a></li>
-                <li><a href="conocenos.html">Conocenos</a></li>
-                <li><a href="contactanos.html">Contactanos</a></li>
-            </ul>
-        </nav>
-    </header>
-    <h1 class="tittle">Torneos</h1>
-    <section class="torneo_section">
-        <div class="torneo_box">
-            <h2>Torneo Blitz</h2>
-            <h3>3+2</h3>
-            <p>15/03/2022</p>
-            <p>Inscripción</p>
-            <h3>$700</h3>
-            <a href="contactanos.html" class="torneo_a">Suscribite</a>
+<body>
+    <!-- nav bar -->
+    <nav class="navbar navbar-expand-lg bg-danger bg-gradient navbar-dark">
+        <div class="container">
+            <a href="index.html" class="navbar-brand"><img src="/img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-dark">Academy</span></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navmenu">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="torneos.html" class="nav-link">Torneos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="cursos.html" class="nav-link">Cursos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="conocenos.html" class="nav-link">Conocenos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contactanos.html" class="nav-link">Contactanos</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="torneo_box">
-            <h2>Torneo Rapid</h2>
-            <h3>10+0</h3>
-            <p>18/03/2022</p>
-            <p>Inscripción</p>
-            <h3>$500</h3>
-            <a href="contactanos.html" class="torneo_a">Suscribite</a>
-        </div>
-        <div class="torneo_box">
-            <h2>Torneo Classic</h2>
-            <h3>90+30</h3>
-            <p>21/03/2022</p>
-            <p>Inscripción</p>
-            <h3>$1000</h3>
-            <a href="contactanos.html" class="torneo_a">Suscribite</a>
+    </nav>
+    <!-- tittle banner-->
+    <section class="bg-danger bg-gradient text-light text-center p-3">
+        <h1 class="tittle">Torneos</h1>
+    </section>
+    <!-- torneos cards -->
+    <section class="p-5">
+        <div class="row">
+            <div class="col-md p-2">
+                <div class="card text-center">
+                    <div class="card-header bg-dark bg-gradient text-light p-3">
+                    15/03/2022
+                    </div>
+                    <div class="card-body bg-danger bg-gradient">
+                    <h3 class="card-title p-3">Torneo Blitz</h3>
+                    <p class="card-text p-3">Formato: 3+2. Valor de inscripción: $700.</p>
+                    <a href="/contactanos.html" class="btn btn-dark bg-gradient">Anotate</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md p-2">
+                <div class="card text-center">
+                    <div class="card-header bg-dark bg-gradient text-light p-3">
+                    18/03/2022
+                    </div>
+                    <div class="card-body bg-danger bg-gradient">
+                    <h3 class="card-title p-3">Torneo Rapid</h3>
+                    <p class="card-text p-3">Formato: 10+0. Valor de inscripción: $500.</p>
+                    <a href="/contactanos.html" class="btn btn-dark bg-gradient">Anotate</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md p-2">
+                <div class="card text-center">
+                    <div class="card-header bg-dark bg-gradient text-light p-3">
+                    21/03/2022
+                    </div>
+                    <div class="card-body bg-danger bg-gradient">
+                    <h3 class="card-title p-3">Torneo Classic</h3>
+                    <p class="card-text p-3">Formato: 90+30. Valor de inscripción: $1000.</p>
+                    <a href="/contactanos.html" class="btn btn-dark bg-gradient">Anotate</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-    <footer class="footer">
-        <div class="footer_redes">
+    <!-- footer -->
+    <footer class="p-1 bg-danger bg-gradient footer_short">
+        <div class="d-flex flex-wrap justify-content-between align-items-center p-3">
             <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
-            <a href="https://www.facebook.com" target="blank_"><img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook"></a>
-            <a href="https://www.instagram.com" target="blank_"><img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram"></a>
-            <a href="https://www.twitter.com" target="blank_"><img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter"></a>
+            <a href="https://www.facebook.com" target="blank_">
+                <img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook">
+            </a>
+            <a href="https://www.instagram.com" target="blank_">
+                <img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram">
+            </a>
+            <a href="https://www.twitter.com" target="blank_">
+                <img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter">
+            </a>
         </div>
-        <p>Sitio web creado por Agustín Taborda</p>
+        <p class="text-center">Sitio web creado por Agustín Taborda</p>
     </footer>
+    <!-- cdn bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
