--- a/contactanos.html
+++ b/contactanos.html
@@ -43,7 +43,7 @@
         <h1 class="tittle">Contactanos</h1>
     </section>
 <!-- contactanos form -->
-<div class="container p-5 my-5 bg-danger bg-gradient">
+<div class="container p-5 my-5 bg-danger bg-gradient rounded">
     <form id="contactForm" data-sb-form-api-token="API_TOKEN">
         <div class="form-floating mb-3">
             <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
