--- a/cursos.html
+++ b/cursos.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg bg-danger bg-gradient navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark bg-gradient navbar-dark">
         <div class="container">
-            <a href="index.html" class="navbar-brand"><img src="/img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-dark">Academy</span></a>
+            <a href="index.html" class="navbar-brand"><img src="/img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-warning">Academy</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -39,16 +39,16 @@
         </div>
     </nav>
     <!-- tittle banner-->
-    <section class="bg-danger bg-gradient text-light text-center p-3">
+    <section class="bg-dark bg-gradient text-light text-center p-3">
         <h1 class="tittle">Torneos</h1>
     </section>
     <!-- torneos main -->
     <div class="row p-3">
         <div class="col-md p-2">
             <div class="card text-center">
-                <div class="card-body bg-danger bg-gradient">
-                <h3 class="card-title p-3">Bootcamp Intermedio</h3>
-                <p class="card-text p-3">Aprende a llevar tus conceptos básicos al siguiente nivel en aperturas, medios juegos, tácticas, estrategia y finales. Si estás listo para desarrollar los fundamentos del ajedrez para principiantes, este curso es para vos. Diseñé este curso para jugadores con una calificación de aproximadamente entre 800 y 1600. Inscribite ahora y preparate para disparar tus habilidades.</p>
+                <div class="card-body bg-dark bg-gradient">
+                <h3 class="card-title p-3 text-warning">Bootcamp Intermedio</h3>
+                <p class="card-text p-3 text-light">Aprende a llevar tus conceptos básicos al siguiente nivel en aperturas, medios juegos, tácticas, estrategia y finales. Si estás listo para desarrollar los fundamentos del ajedrez para principiantes, este curso es para vos. Diseñé este curso para jugadores con una calificación de aproximadamente entre 800 y 1600. Inscribite ahora y preparate para disparar tus habilidades.</p>
                 </div>
             </div>
             <img src="/img/kingbc.png" class="img-fluid rounded mx-auto d-block p-2" alt="pieza rey">
@@ -56,19 +56,19 @@
         <div class="col-md p-2">
             <div class="card text-center">
                 </div>
-                <div class="card-body bg-danger bg-gradient">
-                <h3 class="card-title p-3">Bootcamp Principiante</h3>
-                <p class="card-text p-3">Aprende los fundamentos del ajedrez que te permitirán aplastar a tus oponentes en poco tiempo. Si querés aprender a jugar al ajedrez, o tenés poca experiencia en el juego y estás luchando por mejorar, ¡este curso es para vos! Te brindará todos los fundamentos en las 3 etapas del juego: apertura, medio juego y final. Más importante aún, acelerará su proceso de aprendizaje al enseñarte cómo evitar errores comunes.</p>
+                <div class="card-body bg-dark bg-gradient">
+                <h3 class="card-title p-3 text-warning">Bootcamp Principiante</h3>
+                <p class="card-text p-3 text-light">Aprende los fundamentos del ajedrez que te permitirán aplastar a tus oponentes en poco tiempo. Si querés aprender a jugar al ajedrez, o tenés poca experiencia en el juego y estás luchando por mejorar, ¡este curso es para vos! Te brindará todos los fundamentos en las 3 etapas del juego: apertura, medio juego y final. Más importante aún, acelerará su proceso de aprendizaje al enseñarte cómo evitar errores comunes.</p>
                 </div>
                 <img src="/img/queenbc.png" class="img-fluid rounded mx-auto d-block p-2" alt="pieza reina">
             </div>
         </div>
         <div class="container d-flex justify-content-center align-items-center p-4">
-            <a href="/contactanos.html" class="btn btn-dark bg-gradient">¡Inscribite ahora y comenzá a ganar juegos hoy!</a>
+            <a href="/contactanos.html" class="btn btn-dark bg-gradient text-warning inscribite_btn">¡Inscribite ahora y comenzá a ganar juegos hoy!</a>
         </div>
     </div>
     <!-- footer -->
-    <footer class="p-1 bg-danger bg-gradient">
+    <footer class="p-1 bg-dark bg-gradient">
         <div class="d-flex flex-wrap justify-content-between align-items-center p-3">
             <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
             <a href="https://www.facebook.com" target="blank_">
@@ -81,7 +81,7 @@
                 <img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter">
             </a>
         </div>
-        <p class="text-center">Sitio web creado por Agustín Taborda</p>
+        <p class="text-center text-light">Sitio web creado por Agustín Taborda</p>
     </footer>
     <!-- cdn bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
