--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg bg-danger bg-gradient navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark bg-gradient navbar-dark">
         <div class="container">
-            <a href="index.html" class="navbar-brand"><img src="/img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-dark">Academy</span></a>
+            <a href="index.html" class="navbar-brand"><img src="/img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-warning">Academy</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -39,18 +39,18 @@
         </div>
     </nav>
     <!-- tittle banner-->
-    <section class="bg-danger bg-gradient text-light text-center p-3">
+    <section class="bg-dark bg-gradient text-light text-center p-3">
         <h1 class="tittle">¡Bienvenido a Masterchess!</h1>
     </section>
     <!-- home main -->
     <div class="container">
-        <h2 class="text-center p-5 m-5">Aprende a jugar como un profesional con cursos creados por <span class="fw-bold">Maestros Nacionales</span></h2>
+        <h2 class="text-center p-5 m-5 text-secondary fw-bold">Aprende a jugar como un profesional con cursos creados por <span class="fw-bold text-warning">Maestros Nacionales</span></h2>
         <div class="abtn-box d-flex justify-content-center">
-            <a href="/cursos.html" class="btn btn-danger bg-gradient p-2 m-5 rounded-pill d-flex justify-content-around">Ver cursos</a>
+            <a href="/cursos.html" class="btn btn-warning bg-gradient p-2 m-5 rounded-pill d-flex justify-content-around cursos_btn">Ver cursos</a>
         </div>
     </div>
     <!-- footer -->
-    <footer class="p-1 bg-danger bg-gradient footer_short">
+    <footer class="p-1 bg-dark bg-gradient footer_short">
         <div class="d-flex flex-wrap justify-content-between align-items-center p-3">
             <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
             <a href="https://www.facebook.com" target="blank_">
@@ -63,7 +63,7 @@
                 <img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter">
             </a>
         </div>
-        <p class="text-center">Sitio web creado por Agustín Taborda</p>
+        <p class="text-center text-light">Sitio web creado por Agustín Taborda</p>
     </footer>
     <!-- cdn bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
