--- a/torneos.html
+++ b/torneos.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg bg-danger bg-gradient navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark bg-gradient navbar-dark">
         <div class="container">
-            <a href="index.html" class="navbar-brand"><img src="/img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-dark">Academy</span></a>
+            <a href="index.html" class="navbar-brand"><img src="/img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-warning">Academy</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <!-- tittle banner-->
-    <section class="bg-danger bg-gradient text-light text-center p-3">
+    <section class="bg-dark bg-gradient text-light text-center p-3">
         <h1 class="tittle">Torneos</h1>
     </section>
     <!-- torneos cards -->
@@ -47,13 +47,13 @@
         <div class="row">
             <div class="col-md p-2">
                 <div class="card text-center">
-                    <div class="card-header bg-dark bg-gradient text-light p-3">
+                    <div class="card-header bg-warning bg-gradient text-dark p-3">
                     15/03/2022
                     </div>
-                    <div class="card-body bg-danger bg-gradient">
-                    <h3 class="card-title p-3">Torneo Blitz</h3>
-                    <p class="card-text p-3">Formato: 3+2. Valor de inscripción: $700.</p>
-                    <a href="/contactanos.html" class="btn btn-dark bg-gradient">Anotate</a>
+                    <div class="card-body bg-dark bg-gradient">
+                    <h3 class="card-title p-3 text-light">Torneo Blitz</h3>
+                    <p class="card-text p-3 text-light">Formato: 3+2. Valor de inscripción: $700.</p>
+                    <a href="/contactanos.html" class="btn btn-warning bg-gradient anotate_btn">Anotate</a>
                     </div>
                 </div>
             </div>
@@ -62,29 +62,29 @@
                     <div class="card-header bg-dark bg-gradient text-light p-3">
                     18/03/2022
                     </div>
-                    <div class="card-body bg-danger bg-gradient">
+                    <div class="card-body bg-warning bg-gradient">
                     <h3 class="card-title p-3">Torneo Rapid</h3>
                     <p class="card-text p-3">Formato: 10+0. Valor de inscripción: $500.</p>
-                    <a href="/contactanos.html" class="btn btn-dark bg-gradient">Anotate</a>
+                    <a href="/contactanos.html" class="btn btn-dark bg-gradient anotate_btn">Anotate</a>
                     </div>
                 </div>
             </div>
             <div class="col-md p-2">
                 <div class="card text-center">
-                    <div class="card-header bg-dark bg-gradient text-light p-3">
+                    <div class="card-header bg-warning bg-gradient text-dark p-3">
                     21/03/2022
                     </div>
-                    <div class="card-body bg-danger bg-gradient">
-                    <h3 class="card-title p-3">Torneo Classic</h3>
-                    <p class="card-text p-3">Formato: 90+30. Valor de inscripción: $1000.</p>
-                    <a href="/contactanos.html" class="btn btn-dark bg-gradient">Anotate</a>
+                    <div class="card-body bg-dark bg-gradient">
+                    <h3 class="card-title p-3 text-light">Torneo Classic</h3>
+                    <p class="card-text p-3 text-light">Formato: 90+30. Valor de inscripción: $1000.</p>
+                    <a href="/contactanos.html" class="btn btn-warning bg-gradient anotate_btn">Anotate</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- footer -->
-    <footer class="p-1 bg-danger bg-gradient footer_short">
+    <footer class="p-1 bg-dark bg-gradient footer_short">
         <div class="d-flex flex-wrap justify-content-between align-items-center p-3">
             <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
             <a href="https://www.facebook.com" target="blank_">
@@ -97,7 +97,7 @@
                 <img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter">
             </a>
         </div>
-        <p class="text-center">Sitio web creado por Agustín Taborda</p>
+        <p class="text-center text-light">Sitio web creado por Agustín Taborda</p>
     </footer>
     <!-- cdn bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
