responsive navbar without bs/js + add scss

--- a/cursos.html
+++ b/cursos.html
@@ -9,30 +9,36 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body class="container_cursos">
-    <header class="header">
-        <a href="index.html"><img src="img/mc_logo.png" alt="imgbanner"></a>
+    <header>
+        <h1 class="logo">Masterchess <span>Academy</span></h1>
+        <input type="checkbox" class="nav-toggle" id="nav-toggle">
         <nav>
-            <ul class="menu">
+            <ul>
                 <li><a href="index.html">Inicio</a></li>
+                <li><a href="cursos.html" style="color: #edae49;">Cursos</a></li>
                 <li><a href="torneos.html">Torneos</a></li>
-                <li><a href="cursos.html">Cursos</a></li>
                 <li><a href="conocenos.html">Conocenos</a></li>
                 <li><a href="contactanos.html">Contactanos</a></li>
             </ul>
         </nav>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
     </header>
-    <h1 class="tittle">Cursos</h1>
-    <div class="bootcamp1">
-        <h2>Bootcamp Intermedio</h2>
-        <p>Aprende a llevar tus conceptos básicos al siguiente nivel en aperturas, medios juegos, tácticas, estrategia y finales. Si estás listo para desarrollar los fundamentos del ajedrez para principiantes, este curso es para vos. Diseñé este curso para jugadores con una calificación de aproximadamente entre 800 y 1600. Inscribite ahora y preparate para disparar tus habilidades.</p>
-    </div>
-    <div class="bootcamp2">
-        <h2>Bootcamp Principiante</h2>
-        <p>Aprende los fundamentos del ajedrez que te permitirán aplastar a tus oponentes en poco tiempo. Si querés aprender a jugar al ajedrez, o tenés poca experiencia en el juego y estás luchando por mejorar, ¡este curso es para vos! Te brindará todos los fundamentos en las 3 etapas del juego: apertura, medio juego y final. Más importante aún, acelerará su proceso de aprendizaje al enseñarte cómo evitar errores comunes.</p>
-    </div>
-    <div class="subscribe">
-        <a href="contactanos.html" class="cursos_linktext">¡Inscribite ahora y comenzá a ganar juegos hoy!</a>
-    </div>
+    <main>
+        <h2 class="tittle">Cursos</h2>
+        <div class="bootcamp1">
+            <h2>Bootcamp Intermedio</h2>
+            <p>Aprende a llevar tus conceptos básicos al siguiente nivel en aperturas, medios juegos, tácticas, estrategia y finales. Si estás listo para desarrollar los fundamentos del ajedrez para principiantes, este curso es para vos. Diseñé este curso para jugadores con una calificación de aproximadamente entre 800 y 1600. Inscribite ahora y preparate para disparar tus habilidades.</p>
+        </div>
+        <div class="bootcamp2">
+            <h2>Bootcamp Principiante</h2>
+            <p>Aprende los fundamentos del ajedrez que te permitirán aplastar a tus oponentes en poco tiempo. Si querés aprender a jugar al ajedrez, o tenés poca experiencia en el juego y estás luchando por mejorar, ¡este curso es para vos! Te brindará todos los fundamentos en las 3 etapas del juego: apertura, medio juego y final. Más importante aún, acelerará su proceso de aprendizaje al enseñarte cómo evitar errores comunes.</p>
+        </div>
+        <div class="subscribe">
+            <a href="contactanos.html" class="cursos_linktext">¡Inscribite ahora y comenzá a ganar juegos hoy!</a>
+        </div>
+    </main>
     <footer class="footer">
         <div class="footer_redes">
             <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
