--- a/index.html
+++ b/index.html
@@ -8,25 +8,31 @@
     <link rel="shortcut icon" href="img/mclogo_16x16.png">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body class="container_home">
-    <header class="header">
-        <a href="index.html"><img src="img/mc_logo.png" alt="imgbanner"></a>
+<body class="container_inicio">
+    <header>
+        <h1 class="logo">Masterchess <span>Academy</span></h1>
+        <input type="checkbox" class="nav-toggle" id="nav-toggle">
         <nav>
-            <ul class="menu">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="torneos.html">Torneos</a></li>
+            <ul>
+                <li><a href="index.html" style="color: #edae49;">Inicio</a></li>
                 <li><a href="cursos.html">Cursos</a></li>
+                <li><a href="torneos.html">Torneos</a></li>
                 <li><a href="conocenos.html">Conocenos</a></li>
                 <li><a href="contactanos.html">Contactanos</a></li>
             </ul>
         </nav>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
     </header>
-    <h1 class="tittle">¡Bienvenido a Masterchess!</h1>
-    <div class="hero">
-        <h2 class="home_text">Aprende a jugar como un profesional con cursos creados por Maestros Nacionales</h2>
-        <a href="cursos.html">Ver cursos</a>
-    </div>
-    <footer class="footer">
+    <main>
+        <h2 class="tittle">¡Bienvenido a Masterchess!</h2>
+        <div class="hero">
+            <h2 class="home_text">Aprende a jugar como un profesional con cursos creados por Maestros Nacionales</h2>
+            <a href="cursos.html">Ver cursos</a>
+        </div>
+    </main>
+    <footer>
         <div class="footer_redes">
             <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
             <a href="https://www.facebook.com" target="blank_"><img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook"></a>
@@ -35,5 +41,5 @@
         </div>
         <p>Sitio web creado por Agustín Taborda</p>
     </footer>
-</body>
+    </body>
 </html>
