--- a/torneos.html
+++ b/torneos.html
@@ -9,45 +9,51 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body class="container_torneos">
-    <header class="header">
-        <a href="index.html"><img src="img/mc_logo.png" alt="imgbanner"></a>
+    <header>
+        <h1 class="logo">Masterchess <span>Academy</span></h1>
+        <input type="checkbox" class="nav-toggle" id="nav-toggle">
         <nav>
-            <ul class="menu">
+            <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="torneos.html">Torneos</a></li>
                 <li><a href="cursos.html">Cursos</a></li>
+                <li><a href="torneos.html" style="color: #edae49;">Torneos</a></li>
                 <li><a href="conocenos.html">Conocenos</a></li>
                 <li><a href="contactanos.html">Contactanos</a></li>
             </ul>
         </nav>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
     </header>
-    <h1 class="tittle">Torneos</h1>
-    <section class="torneo_section">
-        <div class="torneo_box">
-            <h2>Torneo Blitz</h2>
-            <h3>3+2</h3>
-            <p>15/03/2022</p>
-            <p>Inscripción</p>
-            <h3>$700</h3>
-            <a href="contactanos.html" class="torneo_a">Suscribite</a>
-        </div>
-        <div class="torneo_box">
-            <h2>Torneo Rapid</h2>
-            <h3>10+0</h3>
-            <p>18/03/2022</p>
-            <p>Inscripción</p>
-            <h3>$500</h3>
-            <a href="contactanos.html" class="torneo_a">Suscribite</a>
-        </div>
-        <div class="torneo_box">
-            <h2>Torneo Classic</h2>
-            <h3>90+30</h3>
-            <p>21/03/2022</p>
-            <p>Inscripción</p>
-            <h3>$1000</h3>
-            <a href="contactanos.html" class="torneo_a">Suscribite</a>
-        </div>
-    </section>
+    <main>
+        <h2 class="tittle">Torneos</h2>
+        <section class="torneo_section">
+            <div class="torneo_box">
+                <h2>Torneo Blitz</h2>
+                <h3>3+2</h3>
+                <p>15/03/2022</p>
+                <p>Inscripción</p>
+                <h3>$700</h3>
+                <a href="contactanos.html" class="torneo_a">Suscribite</a>
+            </div>
+            <div class="torneo_box">
+                <h2>Torneo Rapid</h2>
+                <h3>10+0</h3>
+                <p>18/03/2022</p>
+                <p>Inscripción</p>
+                <h3>$500</h3>
+                <a href="contactanos.html" class="torneo_a">Suscribite</a>
+            </div>
+            <div class="torneo_box">
+                <h2>Torneo Classic</h2>
+                <h3>90+30</h3>
+                <p>21/03/2022</p>
+                <p>Inscripción</p>
+                <h3>$1000</h3>
+                <a href="contactanos.html" class="torneo_a">Suscribite</a>
+            </div>
+        </section>
+    </main>
     <footer class="footer">
         <div class="footer_redes">
             <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
