--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
         <h2 class="text-center p-5 m-5 text-secondary fw-bold">Aprende a jugar como un profesional con cursos creados por <span class="fw-bold text-warning">Maestros Nacionales</span></h2>
         <div class="abtn-box d-flex justify-content-center">
-            <a href="/cursos.html" class="btn btn-warning bg-gradient p-2 m-5 rounded-pill d-flex justify-content-around cursos_btn">Ver cursos</a>
+            <a href="cursos.html" class="btn btn-warning bg-gradient p-2 m-5 rounded-pill d-flex justify-content-around cursos_btn">Ver cursos</a>
         </div>
     </div>
     <!-- footer -->
