seo declarado y sass implementado

--- a/conocenos.html
+++ b/conocenos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sitio de información pertinente a Masterchess, conocenos aquí.">
+    <meta name="keywords" content="ajedrez, cursos, masterchess, grandmaster, academia, encontranos, conocenos">
     <title>Conocenos</title>
     <link rel="shortcut icon" href="img/mclogo_16x16.png">
     <link rel="stylesheet" href="css/estilos.css">
