--- a/cursos.html
+++ b/cursos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sitio de cursos de ajedrez, distintos niveles disponibles y suscripciones.">
+    <meta name="keywords" content="ajedrez, cursos, masterchess, bootcamps, suscripciones">
     <title>Cursos</title>
     <link rel="shortcut icon" href="img/mclogo_16x16.png">
     <link rel="stylesheet" href="css/estilos.css">
