--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Masterchess es una academia de ajedrez dedicada a la formación de jugadores competitivos, aquí podrás encontrar torneos y cursos para evolucionar como jugador.">
+    <meta name="keywords" content="ajedrez, cursos, masterchess, grandmaster">
     <title>Masterchess Academy</title>
     <link rel="shortcut icon" href="img/mclogo_16x16.png">
     <link rel="stylesheet" href="css/estilos.css">
