--- a/torneos.html
+++ b/torneos.html
@@ -30,7 +30,7 @@
     <main>
         <h2 class="tittle">Torneos</h2>
         <section class="torneo_section">
-            <div class="torneo_box">
+            <div class="torneo_box box1">
                 <div class="torneo_img_container">
                     <img src="img/t1.jpg" alt="chess table">
                 </div>
@@ -40,7 +40,7 @@
                     <a href="contactanos.html" class="torneo_a">Suscribite</a>
                 </div>
             </div>
-            <div class="torneo_box">
+            <div class="torneo_box box2">
                 <div class="torneo_img_container">
                     <img src="img/t2.jpg" alt="chess table">
                 </div>
@@ -50,7 +50,7 @@
                     <a href="contactanos.html" class="torneo_a">Suscribite</a>
                 </div>
             </div>
-            <div class="torneo_box">
+            <div class="torneo_box box3">
                 <div class="torneo_img_container">
                     <img src="img/t3.jpg" alt="chess table">
                 </div>
