fix seo descr e imagenes decrip

--- a/contactanos.html
+++ b/contactanos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sitio de contacto, formulario para inscripciones y consultas.">
+    <meta name="description" content="Contacto, formulario para inscripciones, reclamos y consultas.">
     <meta name="keywords" content="ajedrez, cursos, masterchess, grandmaster, formulario, academia, inscribite">
     <title>Contactanos</title>
     <link rel="shortcut icon" href="img/mclogo_16x16.png">
@@ -96,10 +96,10 @@
     </main>
     <footer class="footer">
         <div class="footer_redes">
-            <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
-            <a href="https://www.facebook.com" target="blank_"><img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook"></a>
-            <a href="https://www.instagram.com" target="blank_"><img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram"></a>
-            <a href="https://www.twitter.com" target="blank_"><img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter"></a>
+            <a href="index.html"><img src="img/mc_banner.png" alt="logo masterchess"></a>
+            <a href="https://www.facebook.com" target="blank_"><img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="logo facebook"></a>
+            <a href="https://www.instagram.com" target="blank_"><img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="logo instagram"></a>
+            <a href="https://www.twitter.com" target="blank_"><img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="logo twitter"></a>
         </div>
         <p>Sitio web creado por Agustín Taborda</p>
     </footer>
