--- a/torneos.html
+++ b/torneos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sitio de torneos, inscripciones y fechas disponibles.">
+    <meta name="description" content="Torneos de ajedrez, inscripciones y fechas disponibles.">
     <meta name="keywords" content="ajedrez, torneos, masterchess, inscripciones, categorias">
     <title>Torneos</title>
     <link rel="shortcut icon" href="img/mclogo_16x16.png">
@@ -32,7 +32,7 @@
         <section class="torneo_section">
             <div class="torneo_box box1">
                 <div class="torneo_img_container">
-                    <img src="img/t1.jpg" alt="chess table">
+                    <img src="img/t1.jpg" alt="piezas blancas custimizadas">
                 </div>
                 <div class="torneos_detalles">
                     <h3>Torneo Blitz</h3>
@@ -42,7 +42,7 @@
             </div>
             <div class="torneo_box box2">
                 <div class="torneo_img_container">
-                    <img src="img/t2.jpg" alt="chess table">
+                    <img src="img/t2.jpg" alt="piezas de ajedrez blanco y negro">
                 </div>
                 <div class="torneos_detalles">
                     <h3>Torneo Rapid</h3>
@@ -52,7 +52,7 @@
             </div>
             <div class="torneo_box box3">
                 <div class="torneo_img_container">
-                    <img src="img/t3.jpg" alt="chess table">
+                    <img src="img/t3.jpg" alt="piezas negras de ajedrez">
                 </div>
                 <div class="torneos_detalles">
                     <h3>Torneo Classical</h3>
@@ -64,10 +64,10 @@
     </main>
     <footer class="footer_torneos">
         <div class="footer_redes">
-            <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
-            <a href="https://www.facebook.com" target="blank_"><img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook"></a>
-            <a href="https://www.instagram.com" target="blank_"><img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram"></a>
-            <a href="https://www.twitter.com" target="blank_"><img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter"></a>
+            <a href="index.html"><img src="img/mc_banner.png" alt="logo masterchess"></a>
+            <a href="https://www.facebook.com" target="blank_"><img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="logo facebook"></a>
+            <a href="https://www.instagram.com" target="blank_"><img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="logo instagram"></a>
+            <a href="https://www.twitter.com" target="blank_"><img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt=logo twitter"></a>
         </div>
         <p>Sitio web creado por Agustín Taborda</p>
     </footer>
