--- a/conocenos.html
+++ b/conocenos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sitio de información pertinente a Masterchess, conocenos aquí.">
-    <meta name="keywords" content="ajedrez, cursos, masterchess, grandmaster, academia, encontranos, conocenos">
+    <meta name="description" content="Información pertinente a Masterchess, ubicación, conocenos aquí.">
+    <meta name="keywords" content="ajedrez, cursos, masterchess, grandmaster, academia, encontranos, conocenos, ubicacion, maps">
     <title>Conocenos</title>
     <link rel="shortcut icon" href="img/mclogo_16x16.png">
     <link rel="stylesheet" href="css/estilos.css">
@@ -39,10 +39,10 @@
     </main>
     <footer class="footer">
         <div class="footer_redes">
-            <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
-            <a href="https://www.facebook.com" target="blank_"><img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook"></a>
-            <a href="https://www.instagram.com" target="blank_"><img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram"></a>
-            <a href="https://www.twitter.com" target="blank_"><img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter"></a>
+            <a href="index.html"><img src="img/mc_banner.png" alt="logo masterchess"></a>
+            <a href="https://www.facebook.com" target="blank_"><img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="logo facebook"></a>
+            <a href="https://www.instagram.com" target="blank_"><img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="logo instagram"></a>
+            <a href="https://www.twitter.com" target="blank_"><img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="logo twitter"></a>
         </div>
         <p>Sitio web creado por Agustín Taborda</p>
     </footer>
