fix mobile and netlify form

--- a/contactanos.html
+++ b/contactanos.html
@@ -32,7 +32,7 @@
         <h2 class="tittle">Contactanos</h2>
         <!-- bs 5.1 form -->
         <div class="container p-5 my-5 bg-dark bg-gradient rounded">
-            <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+            <form id="contactForm" data-sb-form-api-token="API_TOKEN" method="post" netlify>
                 <div class="form-floating mb-3">
                     <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
                     <label for="emailAddress">Correo electrónico</label>
